--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
          <h2>Thời gian bây giờ là:</h2>
          <div id="thoi_gian">
              <div>
-                 <span id="gio">00</span><span>:</span>                   <span id="phut">00</span><span>:</span>                 <span id="giay">00</span><span>:</span>
+                 <span id="gio">00</span><span>Giờ</span>
              </div>
-            
+             <div>
+                   <span id="phut">00</span><span>Phút</span>
+             </div>
+             <div>
+                 <span id="giay">00</span><span>Giây</span>
+             </div>
          </div>
      </div>
      <script>
