--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
      <title>Đồng hồ điện tử</title>
      <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-     <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="style/style.css">
  </head>
  <body>
      <div id="dong_ho">
